# SkorKita

./: .gitignore  README.md  app.js  desktop-runtime.js  desktop.css  index.html  package-lock.json  package.json  scoreboard.css  scoreboard.html  scoreboard.js  styles.css
.claude/: launch.json
.github/workflows/: build-installers.yml
database/: README.md
native/macos-preview/: Info.plist  main.m
scripts/: build_frontend.py  build_macos_preview.py  check_js.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
