[package]
name = "skorkita-scoreboard"
version = "0.1.0"
description = "SkorKita offline-first desktop scoreboard"
authors = ["SkorKita"]
edition = "2021"

[lib]
name = "skorkita_scoreboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
local-ip-address = "0.6"
mime_guess = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["serde", "v4"] }

